Bug 482916 - On X11, Panel ruler is not visible on the second monitor, but is visible on the first monitor
Summary: On X11, Panel ruler is not visible on the second monitor, but is visible on t...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.0.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: multiscreen, X11-only
Depends on:
Blocks:
 
Reported: 2024-03-08 19:26 UTC by bailey brightman
Modified: 2025-11-21 22:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.4
Sentry Crash Report:


Attachments
Showing behavior on top and right placement under some of the situations listed (3.35 MB, video/x-matroska)
2024-03-08 19:26 UTC, bailey brightman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bailey brightman 2024-03-08 19:26:01 UTC
Created attachment 166733 [details]
Showing behavior on top and right placement under some of the situations listed

SUMMARY
***
Panel custom width/height tool not visible on second monitor, but is visible on the first monitor. Space seems to be added when switching between the two options but I'm unable to change the width/height. To confirm, this problem exists on multiple resolutions, on a newly created panel, on all alignments, on the top and side, and on a floating/non-floating panel.
***


STEPS TO REPRODUCE
1. Create new panel on a secondary monitor
2. right click panel and enter edit mode
3. select "custom width" from the available options on the select list

OBSERVED RESULT
Space for the custom width tool is created, but no tool is shown. One may not click in the space provided in order to change the size either

EXPECTED RESULT
A tool is shown providing flags to drag changing the size of the panel

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.8-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 12 × Intel® Core™ i7-10750H CPU @ 2.60GHz
Memory: 15.5 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 2070 Super with Max-Q Design/PCIe/SSE2
Manufacturer: HP
Product Name: OMEN Laptop 15-ek0xxx

ADDITIONAL INFORMATION
Attached should be a video showing this behavior, I will test this on wayland and see if the issue is present there. This is also present on the current version compiled by kdesrc-build
Comment 1 bailey brightman 2024-03-08 19:28:26 UTC
To confirm, this behavior is not present on a wayland session. the tool shows up and works as expected
Comment 2 TraceyC 2025-02-24 17:58:33 UTC
Adding the x11-only keyword
Comment 3 Graham Perrin 2025-07-08 19:26:49 UTC
Does this overlap with bug 496907?
Comment 4 Vlad Zahorodnii 2025-11-19 20:49:53 UTC
Git commit 12e6fbd704b4e3f5faeab284b946a3720ba5016a by Vlad Zahorodnii.
Committed on 19/11/2025 at 20:16.
Pushed by vladz into branch 'master'.

shell: Fix panel ruler positioning

setHeight() and setWidth() can change the screen() to the wrong one. Use
the layer shell specific apis to specify the desired size. This should
also make async geometry updates better too.

M  +27   -18   shell/panelconfigview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/12e6fbd704b4e3f5faeab284b946a3720ba5016a
Comment 5 Vlad Zahorodnii 2025-11-19 20:50:02 UTC
Git commit 7b99e9c12ead02aac38b5ba8ec7cf9a2b403a023 by Vlad Zahorodnii.
Committed on 19/11/2025 at 20:16.
Pushed by vladz into branch 'master'.

shell: Harden PanelRulerView against screen changing due to geometry updates

This change re-arranges the code so it should be harder for the panel
ruler and the panel view end up on different outputs. In hindsight, it
will be helpful to have setDesiredOutput() in layer-shell-qt to be sure
that the ruler will be on the correct output.

M  +14   -5    shell/panelconfigview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/7b99e9c12ead02aac38b5ba8ec7cf9a2b403a023
Comment 6 Vlad Zahorodnii 2025-11-19 21:23:17 UTC
Git commit 4fe04faaf0a33f37e765696c56dc9748cf12be62 by Vlad Zahorodnii.
Committed on 19/11/2025 at 21:03.
Pushed by vladz into branch 'Plasma/6.5'.

shell: Fix panel ruler positioning

setHeight() and setWidth() can change the screen() to the wrong one. Use
the layer shell specific apis to specify the desired size. This should
also make async geometry updates better too.
(cherry picked from commit 12e6fbd704b4e3f5faeab284b946a3720ba5016a)

M  +27   -18   shell/panelconfigview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/4fe04faaf0a33f37e765696c56dc9748cf12be62
Comment 7 Vlad Zahorodnii 2025-11-19 21:23:26 UTC
Git commit 903c999377d65b3682ecaa75d0229a7421bcb6fd by Vlad Zahorodnii.
Committed on 19/11/2025 at 21:03.
Pushed by vladz into branch 'Plasma/6.5'.

shell: Harden PanelRulerView against screen changing due to geometry updates

This change re-arranges the code so it should be harder for the panel
ruler and the panel view end up on different outputs. In hindsight, it
will be helpful to have setDesiredOutput() in layer-shell-qt to be sure
that the ruler will be on the correct output.
(cherry picked from commit 7b99e9c12ead02aac38b5ba8ec7cf9a2b403a023)

M  +14   -5    shell/panelconfigview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/903c999377d65b3682ecaa75d0229a7421bcb6fd