shell/panelconfigview.cpp
@@ -66,7 +66,14 @@ void PanelRulerView::syncPanelLocation()
     if (!mainItem()) {
         return;
     }
-    const QRect available = m_containment->corona()->availableScreenRect(m_containment->screen());
+
+    QScreen *screen = m_panelView->screen();
+    const int screenId = m_panelView->containment()->screen();
+    if (screenId == -1) {
+        return;
+    }
+
+    const QRect available = m_containment->corona()->availableScreenRect(screenId);
 
     switch (m_containment->location()) {
     case Plasma::Types::TopEdge:
@@ -104,17 +111,17 @@ void PanelRulerView::syncPanelLocation()
 
         switch (m_containment->location()) {
         case Plasma::Types::TopEdge:
-            setPosition(available.topLeft() + screen()->geometry().topLeft());
+            setPosition(available.topLeft() + screen->geometry().topLeft());
             break;
         case Plasma::Types::LeftEdge:
-            setPosition(available.topLeft() + screen()->geometry().topLeft());
+            setPosition(available.topLeft() + screen->geometry().topLeft());
             break;
         case Plasma::Types::RightEdge:
-            setPosition(available.topLeft() + screen()->geometry().topRight() - QPoint(width(), 0));
+            setPosition(available.topLeft() + screen->geometry().topRight() - QPoint(width(), 0));
             break;
         case Plasma::Types::BottomEdge:
         default:
-            setPosition(available.bottomLeft() + screen()->geometry().topLeft() - QPoint(0, height()));
+            setPosition(available.bottomLeft() + screen->geometry().topLeft() - QPoint(0, height()));
         }
 #endif
     } else if (m_layerWindow) {
@@ -129,6 +136,8 @@ void PanelRulerView::syncPanelLocation()
             m_layerWindow->setDesiredSize(QSize(available.width(), mainItem()->implicitHeight()));
             break;
         }
+
+        setScreen(screen);
 
         m_layerWindow->setKeyboardInteractivity(LayerShellQt::Window::KeyboardInteractivityOnDemand);
         LayerShellQt::Window::Anchors anchors;
